fixes portrait image height, mobile swipebox, post subtitle spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -181,11 +181,19 @@ body {
     display: block;
     margin: 0 auto;
     max-width: 100%;
+    max-height: 700px;
     border-radius: 5px;
   }
 
   .audio-player {
     width: 100%;
+  }
+
+  h3 + p, h2 + p {
+    margin-top: 8px;
+  }
+  h3, h2 {
+    margin-bottom: 8px;
   }
 }
 
@@ -276,8 +284,13 @@ body {
   justify-content: center;
 
   .swipebox {
-    width: 20%;
-    margin: 24px 5px 0;
+    width: 40%;
+    margin: 10px 5px 0;
+
+    @include media-query(DESKTOP) {
+      width: 20%;
+      margin: 24px 5px 0;
+    }
   }
 }
 
